; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_pgflt.c_DeInstallIntEHook.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_pgflt.c_DeInstallIntEHook.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OldIntEHandler = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @DeInstallIntEHook() #0 {
  %1 = call i32 (...) @ENTER_FUNC()
  %2 = call i32 (...) @MaskIrqs()
  %3 = load i64, i64* @OldIntEHandler, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %9

5:                                                ; preds = %0
  %6 = load i64, i64* @OldIntEHandler, align 8
  %7 = trunc i64 %6 to i32
  %8 = call i32 @SetGlobalInt(i32 14, i32 %7)
  store i64 0, i64* @OldIntEHandler, align 8
  br label %9

9:                                                ; preds = %5, %0
  %10 = call i32 (...) @UnmaskIrqs()
  %11 = call i32 (...) @LEAVE_FUNC()
  ret void
}

declare dso_local i32 @ENTER_FUNC(...) #1

declare dso_local i32 @MaskIrqs(...) #1

declare dso_local i32 @SetGlobalInt(i32, i32) #1

declare dso_local i32 @UnmaskIrqs(...) #1

declare dso_local i32 @LEAVE_FUNC(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
